--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
+    "react-redux": "^9.1.2",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
